update: fixing styles on mobile and desktop

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -25,6 +25,7 @@
   margin-top: 10px;
   font-size: 15px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .createNewMatchButton:active {
@@ -55,6 +56,7 @@
   border: none;
   border-radius: 5px;
   margin-right: 10px;
+  cursor: pointer;
 }
 .closeModalButton:active {
   background: red;
@@ -91,6 +93,7 @@
   font-weight: bold;
   font-size: 14px;
   background: #FF5757;
+  cursor: pointer;
 }
 .cancelModalButton:active {
   background: red;
@@ -103,10 +106,14 @@
   font-weight: bold;
   font-size: 14px;
   background: lightseagreen;
+  cursor: pointer;
 }
 
 @media screen and (width > 768px) {
   .createNewMatchButton {
     width: 45%;
+  }
+  .createMatchModal {
+    width: 50%;
   }
 }
