--- a/src/components/PlayersList/PlayersList.module.css
+++ b/src/components/PlayersList/PlayersList.module.css
@@ -182,6 +182,7 @@
   background: lightseagreen;
   padding: 0;
   border-radius: 5px;
+  cursor: pointer;
 }
 .playerVoucherColumn:active {
   background: lightblue;
@@ -201,16 +202,21 @@
   color: #fff;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
 }
 .deletePlayerButton:active {
   background: red;
 }
 .uploadShowPhotoModal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: fixed;
-  top: 15vh;
+  top: 5vh;
   left: 5%;
   width: 90%;
-  height: 70%;
+  height: 85%;
   background: #fff;
   border-radius: 5px;
   border: 2px solid #000;
@@ -230,6 +236,7 @@
   border: none;
   border-radius: 5px;
   margin-right: 10px;
+  cursor: pointer;
 }
 .closeModalButton:active {
   background: red;
@@ -238,7 +245,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 90%;
   height: 90%;
 }
 .voucherUploadContainer {
@@ -268,6 +275,7 @@
   border: thin solid grey;
   border-radius: 5px;
   border: none;
+  cursor: pointer;
 }
 .uploadButton {
   display: flex;
@@ -280,6 +288,7 @@
   font-weight: bold;
   border: none;
   font-size: 15px;
+  cursor: pointer;
 }
 .uploadButton:active {
   background: lightblue;
@@ -296,6 +305,7 @@
 .voucherImage {
   width: 75%;
   height: 80%;
+  border: 1px solid #000;
 }
 
 .p-toast .p-toast-message.p-toast-message-success {
@@ -305,5 +315,15 @@
 @media screen and (width > 768px) {
   .playersListComponent {
     width: 50%;
+  }
+  .uploadShowPhotoModal {
+    left: 25%;
+    width: 50%;
+  }
+  .voucherImageContainer {
+    width: 70%;
+  }
+  .voucherImage {
+    width: 65%;
   }
 }
